Fix bug with sequence number wrapping around in µTP causing bad_alloc's

BUG: 242042

svn path=/trunk/extragear/network/libktorrent/; revision=1145357